--- a/BOTAFOGO/index.html
+++ b/BOTAFOGO/index.html
@@ -6,16 +6,14 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Elenco Jogadores 2023</title>
             <style>
-            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
+                @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Nunito:wght@400;600&display=swap');
             </style>
             <link rel="stylesheet" href="styles.css">
             <script src="js/jogadores2023.js"></script>
             <script src="js/card.js" defer></script>
-            <script src="sons/botafogo-radio-globo.mp3" defer></script>
         </head>
 
-        <body>
-            <audio src="sons/botafogo-radio-globo.mp3" autoplay></audio>
+        <body style="font-family: Nunito; background-color: black; color: white;">
             <!--Título Principal-->
             <h1 style="text-align: center;">Elenco Profissional</h1>
 
