--- a/BOTAFOGO/detalhes.html
+++ b/BOTAFOGO/detalhes.html
@@ -9,7 +9,7 @@
             @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Nunito:wght@400;600&display=swap');
             </style>
             <link rel="stylesheet" href="styles.css">
-            <script src="js/jogadores2023.js" defer></script>
+            <script src="js/jogadores2023.js"></script>
             <script src="js/detalhes.js" defer></script>
         </head>
         
