--- a/AP2_DESENVOLVIMENTO_WEB/index.html
+++ b/AP2_DESENVOLVIMENTO_WEB/index.html
@@ -11,20 +11,19 @@
             <link rel="stylesheet" href="styles.css">
             <script src="js/jogadores2023.js"></script>
             <script src="js/card.js" defer></script>
-            <script src="sons/botafogo-radio-globo.mp3" defer></script>
         </head>
 
         <body>
-            <audio src="sons/botafogo-radio-globo.mp3" autoplay></audio>
+            <audio id="meuAudio" src="sons/botafogo-radio-globo.mp3" autoplay></audio>
             <!--Título Principal-->
             <h1 style="text-align: center;">Elenco Profissional</h1>
 
             <!--div container de cards do elenco feminino-->
-            <h2 style="text-align: center; margin-bottom: 0.5em;">Elenco Feminino</h2>
+            <h2>Elenco Feminino</h2>
             <div id="cards-container-feminino" class="cards-container"></div>
 
             <!--div container de cards do elenco masculino-->
-            <h2 style="text-align: center; margin-top: 3.5em; margin-bottom: 1.5em;">Elenco Masculino</h2>
+            <h2>Elenco Masculino</h2>
             <div id="cards-container-masculino" class="cards-container"></div>
         </body>
     </html>
