--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Elenco Jogadores 2023</title>
             <style>
-                @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Nunito:wght@400;600&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
             </style>
             <link rel="stylesheet" href="styles.css">
             <script src="js/jogadores2023.js"></script>
             <script src="js/card.js" defer></script>
         </head>
 
-        <body style="font-family: Nunito; background-color: black; color: white;">
+        <body>
+            <audio id="meuAudio" src="sons/botafogo-radio-globo.mp3" autoplay></audio>
             <!--Título Principal-->
             <h1 style="text-align: center;">Elenco Profissional</h1>
 
             <!--div container de cards do elenco feminino-->
-            <h2 style="text-align: center; margin-bottom: 0.5em;">Elenco Feminino</h2>
+            <h2>Elenco Feminino</h2>
             <div id="cards-container-feminino" class="cards-container"></div>
 
             <!--div container de cards do elenco masculino-->
-            <h2 style="text-align: center; margin-top: 3.5em; margin-bottom: 1.5em;">Elenco Masculino</h2>
+            <h2>Elenco Masculino</h2>
             <div id="cards-container-masculino" class="cards-container"></div>
         </body>
     </html>
