--- a/detalhes.html
+++ b/detalhes.html
@@ -6,14 +6,14 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Detalhes</title>
             <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Nunito:wght@400;600&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
             </style>
             <link rel="stylesheet" href="styles.css">
             <script src="js/jogadores2023.js" defer></script>
             <script src="js/detalhes.js" defer></script>
         </head>
         
-        <body style="font-family: Nunito; background-color: black; color: white;">
+        <body style="font-family: 'Oswald', sans-serif; ; background-color: black; color: white;">
             <!--h1 personalizado de acordo com elenco-->
             <h1 id="tituloPrincipal" style="text-align: center;"></h1>
 
