--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1 style="text-align: center;">Elenco Profissional</h1>
 
             <h2>Elenco Feminino</h2>
-            <div id="cards-container-feminino" class="cards-container"></div>
+            <div id="cards-container-f" class="cards-container"></div>
 
             <h2>Elenco Masculino</h2>
-            <div id="cards-container-masculino" class="cards-container"></div>
+            <div id="cards-container-m" class="cards-container"></div>
         </body>
     </html>
